# minifetch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cliff.toml  justfile  pyproject.toml
src/minifetch/: main.py
