[project]
name = "minifetch"
version = "0.1.0"
description = "minifetch delivers bite-sized system stats at startup, for those who prefer their uptime with a side of nerdy flair"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "humanize>=4.12.2",
    "psutil>=7.0.0",
    "pyfiglet>=1.0.2",
    "rich>=13.9.4",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "flake8>=7.1.2",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "tox-uv>=1.25.0",
    "uv>=0.6.10",
]

[project.scripts]
minifetch = "minifetch.main:app"


[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = ["src/minifetch/*"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 119
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint]
select = [
    "ALL", # include all the rules, including new ones
]

ignore = [
    "B008",   # doesn't play well with FastAPI DI
    "COM812", # Runs counter to Ruff formatting rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D203",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",   # false positives for local imports
    "E501",   # line too long
    "TRY003", # external messages in exceptions are too verbose
    "TC002",  # too many false positives from my own code
    "TD002",
    "TD003",
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src/minifetch/*"]
